--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
-name: learn-github-actions
-run-name: ${{ github.actor }} is learning GitHub Actions
+name: Create Production Build
+run-name: ${{ github.actor }} is creating production build
 on: [push]
 jobs:
   check-bats-version:
@@ -8,6 +8,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v3
         with:
-          node-version: '14'
-      - run: npm install -g bats
-      - run: bats -v
+          node-version: '20.10.0'
+      - run: npm install
+      - run: npm run build
