--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,26 @@
 name: Create Production Build
 run-name: ${{ github.actor }} is creating production build
-on: [push]
+on: 
+  push: 
+    branches: ['learning-github-actions']
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
-  create-producion-build:
+  # First job - create production build
+  create-production-build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
@@ -11,3 +29,24 @@ jobs:
           node-version: '20.10.0'
       - run: npm install
       - run: npm run build
+
+  # Second job - deploy production build static content to GitHub Pages
+  deploy:
+    needs: create-production-build
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: './build'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
